--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
         "php": ">=5.4.0",
         "guzzlehttp/guzzle": "~5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.6.*"
+    },
     "autoload": {
         "psr-4": {"Kintone\\": "src/"}
+    },
+    "autoload-dev": {
+        "psr-4": {"Kintone\\Tests\\": "tests/"}
     }
 }
